[tool.poetry]
name = "interests-mandara"
version = "0.1.0"
description = ""
authors = ["MiyamotoRin <muhe.iroiro.thedoctor@digitalnature.slis.tsukuba.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
ipywidgets = ">=8.0"
ipython = ">=8.0"
ipykernel = "^6.25.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
